--- a/css/styles.css
+++ b/css/styles.css
@@ -2756,6 +2756,37 @@ div.progress.white {
     margin-bottom: 16px;
   }
 
+  /* Studio responsive styles for landscape tablets */
+  .studio__copy h4 {
+    font-size: 150px;
+  }
+
+  .studio01__img-left,
+  .studio01__img-right,
+  .studio02__img-left,
+  .studio02__img-right {
+    width: 100%;
+    height: 450px;
+    border: none !important;
+  }
+
+  .studio__table-container {
+    flex-direction: column;
+    max-width: 90%;
+    padding: 40px 20px;
+  }
+
+  .studio__table {
+    max-width: 90%;
+    padding: 0 20px;
+  }
+
+  .einleitung-container {
+    flex-direction: column;
+    max-width: 90%;
+    padding: 0 20px;
+  }
+
   .one .copy.copy-some {
     margin: 0 auto;
   }
@@ -3110,6 +3141,74 @@ div.progress.white {
     height: 75px;
   }
 
+  /* studio styles */
+  .studio__copy h4 {
+    font-size: 80px;
+  }
+
+  .studio01__img-left,
+  .studio01__img-right,
+  .studio02__img-left,
+  .studio02__img-right {
+    width: 100%;
+    height: 300px;
+    border: none !important;
+  }
+
+  .studio__images .wrapper {
+    flex-direction: column;
+  }
+
+  .studio__table-container {
+    flex-direction: column;
+    max-width: 95%;
+    padding: 20px 0;
+  }
+
+  .studio__table-left {
+    margin: 0 0 20px 0;
+  }
+
+  .studio__table-right {
+    padding-left: 0;
+    border-left: none;
+    border-top: 2px solid var(--orange);
+    padding-top: 20px;
+    max-width: 100%;
+    margin: 0;
+  }
+
+  .studio__headline {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .einleitung-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .einleitung-container img {
+    max-width: 100%;
+    margin: 20px auto;
+  }
+
+  .einleitung__copy {
+    margin-bottom: 20px;
+  }
+
+  .einleitung__copy-headline {
+    font-size: 24px;
+  }
+
+  .buchung-container {
+    padding: 20px;
+  }
+
+  .buchung__headline {
+    font-size: 32px;
+  }
+
   /* privacy styles */
   html body main {
     padding: 25px 0 25px 0;
@@ -3166,6 +3265,66 @@ div.progress.white {
 
   .spacer_med {
     height: 60px;
+  }
+
+  /* studio styles for tablets */
+  .studio__copy h4 {
+    font-size: 120px;
+  }
+
+  .studio01__img-left,
+  .studio01__img-right,
+  .studio02__img-left,
+  .studio02__img-right {
+    width: 100%;
+    height: 400px;
+    border: none !important;
+  }
+
+  .studio__images .wrapper {
+    flex-direction: column;
+  }
+
+  .studio__table-container {
+    flex-direction: column;
+    max-width: 90%;
+    padding: 30px 0;
+  }
+
+  .studio__table-left {
+    margin: 0 0 30px 0;
+  }
+
+  .studio__table-right {
+    padding-left: 0;
+    border-left: none;
+    border-top: 2px solid var(--orange);
+    padding-top: 30px;
+    max-width: 100%;
+    margin: 0;
+  }
+
+  .studio__headline {
+    font-size: 80px;
+    line-height: 80px;
+  }
+
+  .einleitung-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .einleitung-container img {
+    max-width: 80%;
+    margin: 30px auto;
+  }
+
+  .einleitung__copy {
+    margin-bottom: 30px;
+  }
+
+  .buchung-container {
+    padding: 30px;
   }
 }
 
